--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng app",
+    "start": "node app",
     "startDev": "ng serve",
     "serve": "nodemon app.js",
     "build": "ng build",
