--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.10",
     "nodemon": "^2.0.6",
     "rxjs": "^6.4.0",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "socket.io-client": "^2.3.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
